[metadata]
name = photonai_neuro
description-file  =  README.md
author = PHOTON Team
author_email = hahnt@uni-muenster.de
url = https://www.photon-ai.com/
license = GPLv3
long_description_content_type = text/markdown
project_urls:
    Source Code = https://github.com/wwu-mmll/photonai_graph
    Documentation = https://wwu-mmll.github.io/photonai_graph/
    Bug Tracker = https://github.com/wwu-mmll/photonai_graph/issues
download_url = https://pypi.org/project/photonai_graph/#files
keywords =
    machine learning
    deep learning
    graph convolutional neural networks
    graphs
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research

[files]
package = photonai_neuro