[metadata]
name = photonai_neuro
description-file  =  README.md
author = PHOTON Team
author_email = hahnt@uni-muenster.de
url = https://www.photon-ai.com/
license = GPLv3
long_description_content_type = text/markdown
project_urls:
    Source Code = https://github.com/wwu-mmll/photonai_neuro
    Bug Tracker = https://github.com/wwu-mmll/photonai_neuro/issues
download_url = https://pypi.org/project/photonai_neuro/#files
keywords =
    machine learning
    neuroimaging
    MRI
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research

[files]
package = photonai_neuro